--- a/src/app/modules/auth-profile/login/login.component.html
+++ b/src/app/modules/auth-profile/login/login.component.html
@@ -1,5 +1,5 @@
- <!-- breadcrumbs -->
- <div class="container">
+<!-- breadcrumbs -->
+<div class="container">
     <div class="breadcrumbs">
         <a href="#"><i class="las la-home"></i></a>
         <a href="#" class="active">Login</a>
@@ -19,13 +19,14 @@
                             <div class="col-12">
                                 <div class="single_billing_inp">
                                     <label>Email Address <span>*</span></label>
-                                    <input type="email" placeholder="example@mail.com">
+                                    <input type="email" [(ngModel)]="email" name="email" placeholder="example@mail.com">
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="single_billing_inp">
                                     <label>Password <span>*</span></label>
-                                    <input type="password" placeholder="type password">
+                                    <input type="password" [(ngModel)]="password" name="password"
+                                        placeholder="type password">
                                 </div>
                             </div>
                             <div class="col-12 mt-2 d-flex justify-content-between align-items-center">
@@ -37,7 +38,8 @@
                                 <a href="forgot-password.html" class="text-color">Forgot Password?</a>
                             </div>
                             <div class="col-12 mt-3">
-                                <button type="submit" class="default_btn xs_btn rounded px-4 d-block w-100">Login</button>
+                                <button type="submit" (click)="login()"
+                                    class="default_btn xs_btn rounded px-4 d-block w-100">Login</button>
                             </div>
 
                         </div>
@@ -56,7 +58,8 @@
                         </button>
                     </div>
 
-                    <p class="text-center mt-3 mb-0">Don't have an account.? <a href="register.html" class="text-color">Register Now</a></p>
+                    <p class="text-center mt-3 mb-0">Don't have an account.? <a href="register.html"
+                            class="text-color">Register Now</a></p>
 
                 </div>
             </div>
