--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1235,7 +1235,7 @@
 </div>
 
 <!-- popup -->
-<div class="popup_wrap">
+<!-- <div class="popup_wrap">
     <div class="popup_container">
         <div class="popup_content">
             <div class="close_popup">
@@ -1257,4 +1257,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
