--- a/src/app/modules/home/home-initial/home-initial.component.html
+++ b/src/app/modules/home/home-initial/home-initial.component.html
@@ -152,8 +152,7 @@
                             </div>
                             <div class="topr_content">
                                 <a [routerLink]="[ '/producto/', product.slug ]">
-                                    <h4>{{ product.tittle.length > 15 ? product.tittle.slice(0, 30)+"..." :
-                                        product.tittle
+                                    <h4>{{ product.tittle.length > 15 ? product.tittle.slice(0, 30)+"..." : product.tittle
                                         }} </h4>
                                 </a>
                                 <div class="price">
@@ -539,8 +538,7 @@
                         </div>
                         <div class="sna_content">
                             <a [routerLink]="[ '/producto/', products_aletorio.slug ]">
-                                <h4>{{ products_aletorio.tittle.length > 15 ? products_aletorio.tittle.slice(0,
-                                    20)+"..."
+                                <h4>{{ products_aletorio.tittle.length > 15 ? products_aletorio.tittle.slice(0, 20)+"..."
                                     : products_aletorio.tittle }}</h4>
                             </a>
                             <div class="ratprice">
@@ -703,7 +701,7 @@
 
             <picture>
                 <source media="(min-width: 768px)" srcset="assets/images/offer-3.jpg">
-                <img loading="lazy" class="w-100" src="assets/images/offer-mobile-3.jpg" alt="ad">
+                <img loading="lazy" class="w-100" src="assets/images/brand-3.png" alt="ad">
             </picture>
         </a>
     </div>
@@ -737,8 +735,7 @@
                         </div>
                         <div class="sna_content">
                             <a [routerLink]="[ '/producto/', products_aletorio.slug ]">
-                                <h4>{{ products_aletorio.tittle.length > 15 ? products_aletorio.tittle.slice(0,
-                                    20)+"..."
+                                <h4>{{ products_aletorio.tittle.length > 15 ? products_aletorio.tittle.slice(0, 20)+"..."
                                     : products_aletorio.tittle }}</h4>
                             </a>
                             <div class="ratprice">
