Compra Paypal & Recibo Comprobante al Email

--- a/src/app/modules/ecommerce-auth/checkout-payment/checkout-payment.component.html
+++ b/src/app/modules/ecommerce-auth/checkout-payment/checkout-payment.component.html
@@ -152,7 +152,7 @@
                                 <div class="payment_method_img">
                                     <div class="d-flex credit_crd">
                                         <img loading="lazy" src="assets/images/payment-visa.png" alt="Visa card">
-                                        <img loading="lazy" src="assets/images/payment-master.png" alt="Master card">
+                                        <img loading="lazy" src="assets/images/payment-master.jpg" alt="Master card">
                                         <img loading="lazy" src="assets/images/payment-express.png"
                                             alt="American express">
                                     </div>
