WishLists o lista de deseos
Lista de deseos o wish lists en el Manejo de cuenta

--- a/src/app/modules/ecommerce-auth/profile-client/orders-review-add-clients/orders-review-add-clients.component.html
+++ b/src/app/modules/ecommerce-auth/profile-client/orders-review-add-clients/orders-review-add-clients.component.html
@@ -7,7 +7,7 @@
                     <img loading="lazy" [src]="sale_detail.product.imagen" alt="product">
                 </div>
                 <div class="single_orderdet pdname">
-                    <h5>{{ sale_detail.product.tittle }}</h5>
+                    <h5>{{ sale_detail.product.title }}</h5>
                     <p>{{ sale_detail.total }} {{ sale_detail.currency_payment }}</p>
                 </div>
             </div>
