--- a/src/app/modules/ecommerce-auth/profile-client/wishlist-clients/wishlist-clients.component.html
+++ b/src/app/modules/ecommerce-auth/profile-client/wishlist-clients/wishlist-clients.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="cart_cont">
                 <a [href]="'/producto/'+wish.product.slug">
-                    <h5>{{ wish.product.title }}</h5>
+                    <h5>{{ wish.product.tittle }}</h5>
                 </a>
                 <p class="instock mb-0">Availability: <span>In Stock</span></p>
             </div>
