--- a/src/app/shared/c-detail-product/c-detail-product.component.html
+++ b/src/app/shared/c-detail-product/c-detail-product.component.html
@@ -123,7 +123,8 @@
                 <div class="product_buttons">
                     <a href="#" onclick="return false;" (click)="addCart(product_selected_modal)"
                         class="default_btn me-sm-3 me-2 px-2 px-lg-4"><i class="icon-cart me-2"></i> Add to Cart</a>
-                    <a href="#" class="default_btn second px-3 px-ms-4"><i class="icon-heart me-2"></i>
+                    <a href="#" onclick="return false;" (click)="addWish(product_selected_modal)"
+                        class="default_btn second px-3 px-ms-4"><i class="icon-heart me-2"></i>
                         Wishlist</a>
                 </div>
                 <div class="share_icons footer_icon d-flex">
