--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -446,7 +446,7 @@
                         <i class="icon-heart"></i>
                     </span>
                     <span class="icon_text">Wish List</span>
-                    <span class="pops">6</span>
+                    <span class="pops">{{ listWish.length }}</span>
                 </a>
                 <div class="shopcart">
                     <a href="shopping-cart.html" class="icon_wrp text-center d-none d-lg-block">
